<resources>
    <string name="app_name">Your Calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //login/registration
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgotpsw">Forgot password?</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="i_have_account">I already have an account</string>
    <string name="enter_email_for_reset">Enter your email to reset password</string>
    <string name="send_reset_email">Send password reset email</string>
    <string name="to_login">Go back to login</string>

    <string-array name="type_array">
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Brown</item>
    </string-array>
    
    <string name="newEventButton">Create new event</string>

    //add notification
    <string name="addNotificationButton">X</string>
    <string name="addNotificationTime">Time:</string>

    //widgetItem
    <string name="widgetTest">Meeting with John</string>

    //eventItem
    <string name="itemTest">TextView</string>

    //appwidget
    <string name="nothingPlanned">Nothing planned today :)</string>
    <string name="LogInTextView">You need to login, to see your events!</string>

    //new Event Fragment
    <string name="newEventNameHint">Name</string>
    <string name="newEventTextStart">Start:</string>
    <string name="newEventStartDateButton">13.3.2020</string>
    <string name="newEventStartTimeButton">12:00</string>
    <string name="newEventTextViewEnd">End:</string>
    <string name="newEventEndDateButton">13.13.2020:</string>
    <string name="newEventEndTimeButton">12:00</string>
    <string name="newEventTypeTextView">Type</string>
    <string name="newEventRepeating">Repeating</string>
    <string name="newEventHintDescription">Description</string>
    <string name="newEventHintLocationDescription">Address and/or city</string>
    <string name="newEventChooseLocationTextView">Click location to use:</string>
    <string name="newEventAddNotificationButtonString">Add notification</string>
    <string name="newEventCreateButtonString">Add event</string>

    //homeFragment
    <string name="homeFragmentCreateEvent">Create new event</string>

    //event edit
    <string name="editEventNameEditTextHint">Name</string>
    <string name="editEventStart">Start:</string>
    <string name="editEventStartButton">13.3.2020</string>
    <string name="editEventStartTimeButton">12:00</string>
    <string name="editEventEndDateButton">13.13.2020</string>
    <string name="editEventEndTimeButton">12:00</string>
    <string name="editEventType">Type</string>
    <string name="editEventRepeating">Repeating</string>
    <string name="editEventDescriptionEditTextHint">Description</string>
    <string name="editEventLocationEditTextHint">Address and/or city</string>
    <string name="editChooseLocationTextView">Click location to use:</string>
    <string name="editEventAddNotificationButton">Add notification</string>
    <string name="editEventSaveButton">Save changes</string>

    //fragment event
    <string name="locationTextView">location</string>
    <string name="humidityTextView">humidity</string>
    <string name="temperatureTextView">temperature</string>
    <string name="NotificationsTextView">Notifications:</string>
    <string name="editEventButtonString">Edit</string>
    <string name="deleteEventButtonString">Delete</string>
    <string name="conditionTextView">condition</string>

    <string-array name="repeat_array">
        <item>No repeat</item>
        <item>Once a week</item>
        <item>Once a month</item>
        <item>Once a year</item>
    </string-array>

    <string-array name="notification_array">
        <item>At start time</item>
        <item>5 minutes before</item>
        <item>10 minutes before</item>
        <item>15 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
        <item>2 hours before</item>
        <item>1 day before</item>
        <item>1 week before</item>
        <item>At end time</item>
    </string-array>
</resources>