<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newevent.NewEventFragment"
    android:background="@color/html_light_grey">

    <ScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:background="@drawable/boxbg_test"
                android:elevation="8dp">

                <EditText
                    android:id="@+id/newEventNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/newEventNameHint"
                    android:inputType="text"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/newEventTextStart"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/newEventStartDateButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:backgroundTint="#00FFFFFF"
                        android:text="@string/newEventStartDateButton"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/newEventStartTimeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:textColor="@color/black"
                        android:backgroundTint="#00FFFFFF"
                        android:text="@string/newEventStartTimeButton"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:text="@string/newEventTextViewEnd" />

                    <Button
                        android:id="@+id/newEventEndDateButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:backgroundTint="#00FFFFFF"
                        android:textSize="16sp"
                        android:text="@string/newEventEndDateButton" />

                    <Button
                        android:id="@+id/newEventEndTimeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:textColor="@color/black"
                        android:backgroundTint="#00FFFFFF"
                        android:text="@string/newEventEndTimeButton"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/newEventTypeTextView" />

                        <Spinner
                            android:id="@+id/newEventTypeSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/newEventRepeating" />

                        <Spinner
                            android:id="@+id/newEventRepeatSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:background="@drawable/boxbg_test"
                android:elevation="8dp" >

                <EditText
                    android:id="@+id/newEventDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/newEventHintDescription"
                    android:inputType="textMultiLine"
                    android:textSize="16sp"
                    android:maxLines="4"
                    android:scrollbars="vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp" >

                    <EditText
                        android:id="@+id/newEventLocationEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:inputType="text"
                        android:drawableEnd="@drawable/ic_baseline_location_searching_test_24"
                        android:hint="@string/newEventHintLocationDescription" />

                </LinearLayout>

                <TextView
                    android:id="@+id/chooseLocationTextView"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_height="wrap_content"
                    android:text="@string/newEventChooseLocationTextView"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/geolocationList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp" >

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/notificationList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp" >

                </LinearLayout>

                <Button
                    android:id="@+id/newEventAddNotificationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/newEventAddNotificationButtonString"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <Button
                android:id="@+id/newEventCreateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/newEventCreateButtonString"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>